# octo-logo

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  requirements.txt  ruff.toml
.github/workflows/: docs_deploy.yml  pr_checks.yml  pypi_publish.yml
colors/: adi1090x.toml  cherry.toml  midnight_abyss.toml
docs/: package.json  pnpm-lock.yaml
docs/.vitepress/: config.mts
docs/.vitepress/theme/: custom.css
docs/src/: available-styles.md  getting-started.md  index.md  pull-request.md  understanding-the-project.md
docs/src/available-styles/: index.md
output/: info.txt
src/: app.tcss  main.py  utils.py  wizard.py
src/octologo/: __init__.py  __main__.py  utils.py  wizard.py
src/octologo/colors/: adi1090x.toml  cherry.toml
src/octologo/styles/: first_letter_underlined.py  underline_core.py
src/styles/: all_underlined.py  first_letter_underlined.py  underline_core.py
tests/: test_no_errors.py
